alignment issue fixed Ref:https://traveltripper.lightning.force.com/lightning/r/Case/5001Q00000mAprMQAS/view

--- a/_sass/pages/_offers.scss
+++ b/_sass/pages/_offers.scss
@@ -46,7 +46,11 @@
           min-height: 80px;
         }
       }
-
+      .offerName-height{
+        @media(min-width: $screen-sm-min) {
+          min-height: 105px;
+        }
+      }
       div,
       p {
         font-size: 15px;
